--- a/LibMecabSample/Settings.bundle/Root.plist
+++ b/LibMecabSample/Settings.bundle/Root.plist
@@ -16,6 +16,16 @@
 			<key>DefaultValue</key>
 			<true/>
 		</dict>
+        <dict>
+            <key>Type</key>
+            <string>PSToggleSwitchSpecifier</string>
+            <key>Title</key>
+            <string>IncrementalSearch</string>
+            <key>Key</key>
+            <string>IncrementalSearch</string>
+            <key>DefaultValue</key>
+            <true/>
+        </dict>
 	</array>
 </dict>
 </plist>
