--- a/LibMecabSample/HinshiMasterDev.entitlements
+++ b/LibMecabSample/HinshiMasterDev.entitlements
@@ -3,12 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array>
-		<string>iCloud.$(CFBundleIdentifier)</string>
-	</array>
-	<key>com.apple.developer.icloud-services</key>
-	<array>
-		<string>CloudKit</string>
-	</array>
+	<array/>
 </dict>
 </plist>
