--- a/LibMecabSample/Settings.bundle/Root.plist
+++ b/LibMecabSample/Settings.bundle/Root.plist
@@ -26,6 +26,16 @@
                 <key>DefaultValue</key>
                 <true/>
             </dict>
+            <dict>
+                <key>Type</key>
+                <string>PSToggleSwitchSpecifier</string>
+                <key>Title</key>
+                <string>DevelopmentMode</string>
+                <key>Key</key>
+                <string>DevelopmentMode</string>
+                <key>DefaultValue</key>
+                <false/>
+            </dict>
         </array>
     </dict>
 </plist>
